@@ -10,6 +10,8 @@ mlUnit development snapshot
     after each test's tear_down execution
   - Expanded mlunit_param to get and set the whole parameter configuration.
 
+  - Fix: assert() calls break R2006b compatibility.
+
 
 mlUnit 1.6.7 (2015-01-08)
 -------------------------
